[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/WretchedGamesSplash.gd" type="Script" id=1]
[ext_resource path="res://Assets/IMGs/wretchedgames.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/DoHyeon-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Audio/rain.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/sigh.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 4
outline_color = Color( 0.203922, 0.203922, 0.203922, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_space = 30
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="WretchedGamesSplash" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 539 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 516.0
margin_top = 820.0
margin_right = 1404.0
margin_bottom = 940.0
custom_fonts/font = SubResource( 2 )
text = "Wretched  Games"

[node name="LabelAnim" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[node name="Sigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="SceneAnim" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 4 )
[connection signal="animation_started" from="LabelAnim" to="." method="_on_LabelAnim_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Sigh" to="." method="_on_Sigh_finished"]
[connection signal="animation_finished" from="SceneAnim" to="." method="_on_SceneAnim_animation_finished"]
